Correct overflow style

--- a/src/styles/Add.module.css
+++ b/src/styles/Add.module.css
@@ -1,6 +1,9 @@
 .container {
   padding-top: 75px;
   padding-bottom: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .addForm {
@@ -15,7 +18,7 @@
   border-radius: 50px;
   height: 35px;
   padding: 0 20px;
-  width: 100%;
+  width: 90%;
   max-width: 600px;
   margin: auto;
 }
@@ -31,7 +34,7 @@
   height: 100px;
   padding: 10px 20px;
   margin: auto;
-  width: 100%;
+  width: 90%;
   max-width: 600px;
 }
 
@@ -61,4 +64,13 @@
 .submit:disabled {
   background-color: lightgrey;
   color: gray;
+}
+
+/* Styles for larger than 768 */
+@media screen and (min-width: 768px) {
+  .container {
+    margin-left: 20vw;
+    max-width: 80vw;
+    min-height: 100vh;
+  }
 }
